# pricing_library

./: .gitignore  README.md  examples.py  pyproject.toml  requirements.txt  test_imports.py
.pytest_cache/v/cache/: lastfailed  nodeids
core/models/american/: binomial_tree.py
core/models/european/: monte_carlo.py
core/models/exotic/: barrier_options_pricing.py
core/models/exotic_options/: gap_options.py
core/models/utils/: confidence_interval.py  gbm_simulation.py  laguerre_matrix.py  monte_carlo_pricing.py  path_simulation.py  payoff.py  plot.py  statistics.py
interface/: main.py
interface/.streamlit/: config.toml
src/pricing_library/: __init__.py
src/pricing_library/calculators/: __init__.py  american_calculator.py  asian_calculator.py  barrier_calculator.py  base_calculator.py  combination_calculator.py  european_calculator.py  gap_calculator.py
src/pricing_library/core/: __init__.py  entities.py  exceptions.py  pricing_service.py
tests/: test_barrier_options_pricing.py  test_bs_barrier_pricing.py  test_bs_scalar.py  test_bs_vectorized.py  test_bs_vol_scalar.py  test_bs_vol_vectorized.py  test_lsm.py  test_lsm_pricing.py  test_lsm_vol.py  test_mc_barrier_pricing.py  test_mc_vs_bs.py  test_us_binomial_tree.py
tests/test_models/: test_black_scholes.py  test_black_scholes_barrier.py  test_least_squares_mc.py
visualizations/: plot_bs_european_payoff.py  plot_bs_european_profit.py  plot_european_greeks.py  plot_exercise_nodes_american_options.py  plot_lsm_convergence.py  plot_lsm_exercise_nodes.py  plot_lsm_gbm_distribution.py  test.py
(+43 files in other folders)
