[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pricing_library"
version = "0.1.0"
description = "Option pricing library with multiple models"
authors = [
    {name = "Vincent Courtehoux", email = "vincentcourtehoux@gmail.com"}
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "streamlit>=1.12.0",
    "scikit-learn>=1.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}
python-requires = ">=3.8"